data/derived/comb/progs/unify/prog1480.ml.out
Characters 76-88:
  a=(t,(h+x))::a
    ^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type 'b list * 'c
